--- a/client/src/modules/Menu/MenuNavigation/MenuNavigation.module.scss
+++ b/client/src/modules/Menu/MenuNavigation/MenuNavigation.module.scss
@@ -1,3 +1,9 @@
+.wrapper {
+  position: sticky;
+  top: 120px;
+  height: max-content;
+}
+
 .navBtn {
   background-color: #5f5fd91a;
   color: #6638dd;
