--- a/client/src/modules/Header/Header.module.scss
+++ b/client/src/modules/Header/Header.module.scss
@@ -3,6 +3,8 @@
   box-shadow: 0 2px 40px #0000001a;
   width: 100%;
   padding: 10px 0;
+  position: fixed;
+  z-index: 100;
 
   &__content {
     display: flex;
