add dark and light mode

--- a/client/src/modules/Header/Header.module.scss
+++ b/client/src/modules/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: white;
+  background-color: var(--back-color);
   box-shadow: 0 2px 40px #0000001a;
   width: 100%;
   padding: 10px 0;
