--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -39,7 +39,7 @@ ul li {
   padding: 0;
   margin: 0;
   border: 0;
-  transition: all 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 *,
 *:before,
