--- a/src/modules/Header/Header.module.scss
+++ b/src/modules/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: var(--back-color);
+  background-color: var(--main-background);
   box-shadow: 0 2px 40px #0000001a;
   width: 100%;
   padding: 10px 0;
