--- a/src/pages/Layout/Layout.module.scss
+++ b/src/pages/Layout/Layout.module.scss
@@ -1,9 +1,7 @@
 .wrapper {
-  max-height: 100vh;
-
   & main {
     padding-top: 100px;
   }
 
-  background-color: var(--my-color);
+  background-color: var(--main-background);
 }
