--- a/src/components/Menu/MenuCollapse/MenuCollapse.module.scss
+++ b/src/components/Menu/MenuCollapse/MenuCollapse.module.scss
@@ -5,12 +5,11 @@
 }
 
 .navBtn {
-  background-color: #5f5fd91a;
-  color: #6638dd;
-  border: none;
-  width: 100%;
-  font-weight: 800;
   font-size: 18px;
+}
+
+.collapse {
+  transition: height 0.5s;
 }
 
 .active {
