--- a/src/UI/OverlayingPopup/OverlayingPopup.module.scss
+++ b/src/UI/OverlayingPopup/OverlayingPopup.module.scss
@@ -1,4 +1,4 @@
-.container {
+.modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -6,7 +6,7 @@
   bottom: 0;
 
   padding: 36px;
-  z-index: 1;
+  z-index: 100;
 
   display: flex;
   justify-content: center;
