--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,6 +75,7 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   background-color: var(--back-color);
+  scroll-behavior: smooth;
 }
 
 input,
