--- a/src/UI/Button/Button.module.scss
+++ b/src/UI/Button/Button.module.scss
@@ -1,11 +1,12 @@
 .buttonWrapper {
   padding: 15px 24px;
-  border: 0.5px solid #cccccc;
-  border-radius: 16px;
+  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   cursor: pointer;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
+  border: 1px solid #e0e0e0;
 
   &_disabled {
     background-color: #cccccc;
